--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{ "homepage": "http://LinaTrujillo20.github.io/proyectcafeyletras",
   "name": "cafeyletras",
   "version": "0.1.0",
   "private": true,
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
